test/ui/tests/fail/execute-scoped-leak.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/fail/execute-scoped-leak.rs:20:9
   |
17 |     let mut leaked: Option<Handle<JsNumber>> = None;
   |         ---------- `leaked` declared here, outside of the closure body
18 |
19 |     cx.execute_scoped(|mut inner_cx| {
   |                        ------------ `inner_cx` is a reference that is only valid in the closure body
20 |         leaked = Some(inner_cx.number(42));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `inner_cx` escapes the closure body here
